removing ableton project

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 sfx/SFXPROJECT Project/SFXPROJECT.als
 sfx/SFXPROJECT Project/Icon
+sfx/.DS_Store
+sfx/SFXPROJECT Project/Backup/SFXPROJECT \[2024-11-29 122649\].als
+sfx/SFXPROJECT Project/Backup/SFXPROJECT \[2024-11-29 155716\].als
